<resources>
    <string name="report_issue">Report Issue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="if_you_leave_page">If you leave page, any changes you have\n made will be lost.</string>
    <string name="save">Save</string>
    <string name="showing">SHOWING</string>
    <string name="_5_bugs">5 Bugs</string>
    <string name="a12_234">A12–234</string>
    <string name="button_not_visible">Button not visible</string>
    <string name="menu">Menu</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Are you sure you want to delete\n"Button not visible?"</string>
    <string name="delete_sub_title">Deleting the report will permanently erase it</string>
    <string name="reported_by">REPORTED BY</string>
    <string name="kv">KV</string>
    <string name="kriti_verma">Kriti Verma</string>
    <string name="title">TITLE</string>
    <string name="untitled">Untitled</string>
    <string name="description">DESCRIPTION</string>
    <string name="describe_the_bug_here">Describe the bug here..</string>
    <string name="bug_type">BUG TYPE</string>
    <string name="bug">Bug</string>
    <string name="attachments_cap">ATTACHMENTS</string>
    <string name="record">RECORD</string>
    <string name="ui_improvement">UI Improvement</string>
    <string name="crash">Crash</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="feels_a_little_lonely">Feels a little lonely..</string>
    <string name="something_went_wrong">Something went wrong..</string>
    <string name="start_testing_to_get_all_bugs_here">Start testing to get all bugs here</string>
    <string name="refresh_your_page_or_try_again_after_n_sometime">Refresh your page or try again after\n sometime</string>
    <string name="if_this">If this doesn\'t resolve in a short while,\n feel free to <b><u>contact us</u></b></string>
    <string name="add_media">Add Media</string>
    <string name="upload_from_gallery">Upload from gallery</string>
    <string name="start_screen_recording">Start screen recording</string>
    <string name="take_a_screenshot">Take a screenshot</string>
    <string name="yes">Yes</string>
    <string name="record_audio">Record Audio</string>
    <string name="select_reporter">Select Reporter</string>
    <string name="quash_has_detected_a_crash_ndo_you_want_to_report_this">Quash has detected a crash.\nDo you want to report this?</string>
    <string name="powered_by_quash">Powered by Quash</string>
    <string name="priority">PRIORITY</string>
    <string name="priority_small">Priority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="notdefined">Not Defined</string>
</resources>