<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="@dimen/_12dp">

    <ImageView
        android:id="@+id/ivDialogClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16dp"
        android:src="@drawable/quash_ic_cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/unsaved_changes"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8dp"
        android:gravity="center"
        android:text="@string/if_you_leave_page"
        android:textColor="@color/grey_700"
        android:textSize="@dimen/_12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/btDiscard"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_42dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_8dp"
        android:background="@drawable/quash_bg_rounded_border"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />

    <TextView
        android:id="@+id/btSave"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_42dp"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:background="@drawable/quash_bg_cta_black_8dp"
        android:gravity="center"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sp"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>