<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvAttach"
        style="@style/QuashText14sp"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        android:text="@string/menu"
        android:textColor="@color/media_black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ivClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16dp"
        android:src="@drawable/quash_ic_cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEdit"
        style="@style/QuashText14sp"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:drawableStart="@drawable/quash_ic_edit"
        android:drawablePadding="@dimen/_8dp"
        android:text="@string/edit"
        android:textColor="@color/media_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAttach" />

    <View
        android:id="@+id/viewEdit"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_1dp"
        android:background="@color/grey_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEdit" />

    <TextView
        android:id="@+id/tvDelete"
        style="@style/QuashText14sp"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16dp"
        android:drawableStart="@drawable/quash_ic_delete"
        android:drawablePadding="@dimen/_8dp"
        android:text="@string/delete"
        android:textColor="@color/red_800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>